--- a/front-end/src/pages/summary/stylesSum.css
+++ b/front-end/src/pages/summary/stylesSum.css
@@ -37,6 +37,9 @@
     margin-top: 20px;
     background-color: rgb(196, 255, 225);
     border-radius: 10px;
+    height: 400px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .center-container {
